@@ -26,7 +26,7 @@ allowExtractionForAccessibility true
 ifXFAExtractOnlyXFA false
 catchIntermediateIOExceptions true
 #options: no_ocr, ocr_only, ocr_and_text_extraction, auto
-ocrStrategy no_ocr
+ocrStrategy auto
 #dots per inch for the ocr rendering of the page image
 ocrDPI 300
 #if you request tif, make sure you have imageio jars on your classpath!
