@@ -2,6 +2,9 @@ Release 2.0.0-ALPHA - 01/13/2021
 
    BREAKING CHANGES in 2.0.0
    * General
+     * OCR is now triggered automatically for PDFs if tesseract
+       is on the user's path see (https://cwiki.apache.org/confluence/display/TIKA/TikaOCR#TikaOCR-disable-ocr)
+       for how to disable OCR.
      * Remove deprecated Metadata keys/properties (TIKA-1974).
      * Removed dangerous calls to read an inputstream or convert to bytes
        without specifying a charset
